--- a/acme_kustomize/acme_fitness.yaml
+++ b/acme_kustomize/acme_fitness.yaml
@@ -111,7 +111,7 @@ spec:
       - name: cart-data
         emptyDir: {}
       containers:
-              - image: gcr.io/vmwarecloudadvocacy/acmeshop-cart:latest
+      - image: gcr.io/vmwarecloudadvocacy/acmeshop-cart:latest
         name: cart
         env:
         - name: REDIS_HOST
@@ -268,7 +268,7 @@ spec:
       - name: catalog-data
         emptyDir: {}
       containers:
-      - image: gcr.io/vmwarecloudadvocacy/acmeshop-catalog:latest
+      - image: gcr.io/vmwarecloudadvocacy/acmeshop-catalog:rel1
         name: catalog
         env:
         - name: CATALOG_DB_HOST
@@ -336,7 +336,7 @@ spec:
         service: shopping
     spec:
       containers:
-      - image: gcr.io/vmwarecloudadvocacy/acmeshop-front-end:latest
+      - image: gcr.io/vmwarecloudadvocacy/acmeshop-front-end:rel1
         name: shopping
         env:
         - name: FRONTEND_PORT
