--- a/tsm-split-fe-be/tsm-fe/autoscale-shopping.yaml
+++ b/tsm-split-fe-be/tsm-fe/autoscale-shopping.yaml
@@ -22,6 +22,6 @@ spec:
     trigger:
       gracePeriodSeconds: 90
       metric:
-        name: CPUUsagePercent
-        scaleUp: 80
-        scaleDown: 50
+        name: p99Latency
+        scaleUp: 500
+        scaleDown: 300
