--- a/tsm-split-fe-be/tsm-fe/autoscale-shopping.yaml
+++ b/tsm-split-fe-be/tsm-fe/autoscale-shopping.yaml
@@ -24,4 +24,6 @@ spec:
       metric:
         name: p99Latency
         scaleUp: 500
-        scaleDown: 500
+        scaleDown: 300
+        windowSeconds: 60
+
