--- a/traffic-generator/loadgen-vsphere.yaml
+++ b/traffic-generator/loadgen-vsphere.yaml
@@ -45,7 +45,7 @@ spec:
           value: "10.197.107.227"
       containers:
       - name: main
-        image: docker.io/vmwareallspark/acme-load-gen:latest
+        image: harbor.tanzuworld.com/apps/acme-load-gen
         imagePullPolicy: Always
         ports:
         - containerPort: 8089
