--- a/traffic-generator/loadgen-vsphere.yaml
+++ b/traffic-generator/loadgen-vsphere.yaml
@@ -34,7 +34,7 @@ spec:
       restartPolicy: Always
       initContainers:
       - name: wait-frontend
-        image: alpine:3.7
+        image: harbor.tanzuworld.com/apps/alpine:3.7
         command: ['sh', '-c', 'echo -e "http://nl.alpinelinux.org/alpine/v3.5/main\nhttp://nl.alpinelinux.org/alpine/v3.5/community" > /etc/apk/repositories' , 'set -x;  apk update ; apk add curl && 
           until timeout -t 2 curl -f "http://${FRONTEND_ADDR}"; do 
             echo "waiting for http://${FRONTEND_ADDR}"; 
@@ -45,7 +45,7 @@ spec:
           value: "10.197.107.227"
       containers:
       - name: main
-        image: harbor.tanzuworld.com/apps/acme-load-gen
+        image: harbor.tanzuworld.com/apps/acme-load-gen:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8089
