--- a/tsm-split-fe-be/autoscale-cart-p99.yaml
+++ b/tsm-split-fe-be/autoscale-cart-p99.yaml
@@ -5,14 +5,14 @@ metadata:
   name: asd-shopping
   namespace: acme
   labels:
-    app: shopping
+    app: cart
     version: v1
     release: demo
 spec:
   scaleTargetRef:
     kubernetes:
       kind: Deployment
-      name: shopping
+      name: cart
   scaleRule:
     mode: EFFICIENCY
     enabled: true
@@ -23,7 +23,7 @@ spec:
       gracePeriodSeconds: 90
       metric:
         name: p99Latency
-        scaleUp: 750
-        scaleDown: 400
+        scaleUp: 700
+        scaleDown: 500
         windowSeconds: 60
 
