--- a/vsphere-split/be_services/cart-redis-total.yaml
+++ b/vsphere-split/be_services/cart-redis-total.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
         - name: cart-redis
-          image: redis:5.0.3-alpine
+          image: harbor.tanzuworld.com/acme/redis:5.0.3-alpine
           command:
             - "redis-server"
           imagePullPolicy: Always
