--- a/vsphere-split/be_services/catalog-db-total.yaml
+++ b/vsphere-split/be_services/catalog-db-total.yaml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
         - name: catalog-mongo
-          image: mongo:4
+          image: harbor.tanzuworld.com/acme/mongo:4
           resources:
             {}
           ports:
