--- a/vsphere-split/fe_services/cart.yaml
+++ b/vsphere-split/fe_services/cart.yaml
@@ -39,7 +39,7 @@ spec:
       - name: acmefit-cart-data
         emptyDir: {}
       containers:
-      - image: gcr.io/vmwarecloudadvocacy/acmeshop-cart
+      - image: harbor.tanzuworld.com/acme/acmeshop-cart
         name: cart
         env:
         - name: REDIS_HOST
