--- a/vsphere-split/fe_services/catalog.yaml
+++ b/vsphere-split/fe_services/catalog.yaml
@@ -42,7 +42,7 @@ spec:
       - name: acmefit-catalog-data
         emptyDir: {}
       containers:
-      - image: gcr.io/vmwarecloudadvocacy/acmeshop-catalog
+      - image: harbor.tanzuworld.com/acme/acmeshop-catalog
         name: catalog
         env:
         - name: CATALOG_DB_HOST
