--- a/todo_demo/loadgen-todo.yaml
+++ b/todo_demo/loadgen-todo.yaml
@@ -42,7 +42,7 @@ spec:
           done;']
         env:
         - name: FRONTEND_ADDR
-          value: "todo-ui:3000"
+          value: "todo-ui.svc.cluster.local:3000"
       containers:
       - name: main
         image: docker.io/vmwareallspark/acme-load-gen:latest
@@ -51,7 +51,7 @@ spec:
         - containerPort: 8089
         env:
         - name: FRONTEND_ADDR
-          value: "todo-ui:3000"
+          value: "todo-ui.svc.cluster.local:3000"
         resources:
           requests:
             cpu: 300m
