--- a/tsm-split-fe-be/tsm-fe/acme_fitness_fe.yaml
+++ b/tsm-split-fe-be/tsm-fe/acme_fitness_fe.yaml
@@ -43,13 +43,13 @@ spec:
         - name: FRONTEND_PORT
           value: '3000'
         - name: USERS_HOST
-          value: 'users.demo.com'
+          value: 'users.tanzu.io'
         - name: CATALOG_HOST
-          value: 'catalog.demo.com'
+          value: 'catalog.tanzu.io'
         - name: ORDER_HOST
-          value: 'order.demo.com'
+          value: 'order.tanzu.io'
         - name: CART_HOST
-          value: 'cart.demo.com'
+          value: 'cart.tanzu.io'
         - name: USERS_PORT
           value: '8081'
         - name: CATALOG_PORT
